# pure_pursuit

./: CMakeLists.txt  package.xml
cfg/: PurePursuit.cfg
launch/: figure_eight.launch  pure_pursuit.launch  simple_loop.launch  turn_in_place.launch
scripts/: figure_eight.py  key_pause.py  simple_loop.py  straight_line.py  turn_in_place.py
src/: pure_pursuit.cpp
