<?xml version="1.0"?>
<package>
  <name>pure_pursuit</name>
  <version>0.9.0</version>
  <description>A pure pursuit path following algorithm.</description>

  <author email="damjan.miklic@fer.hr">Damjan Miklic</author>
  <maintainer email="damjan.miklic@fer.hr">Damjan Miklic</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <!-- For dynamic reconfigure -->
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>srslib_framework</build_depend>
  <!-- TODO: Figure out how to use tf2 DataConversions -->
  <!--build_depend>tf2_kdl</build_depend-->
  <!--build_depend>tf2_geometry_msgs</build_depend-->
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <!-- For dynamic reconfigure -->
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>srslib_framework</run_depend>

  <!-- TODO: Figure out how to use tf2 DataConversions -->
  <!--run_depend>tf2_kdl</run_depend-->
  <!--run_depend>tf2_geometry_msgs</run_depend-->
</package>
